--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,5 +21,8 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
+    - name: Find scripts
+      run: |
+        ls -la   
     - name: Test
       run: dotnet test --no-build --verbosity normal
