--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,14 +30,14 @@ jobs:
       run: dotnet publish -c Release -r linux-x64 --self-contained true -o ./rel-linux ./src/HttpExecutor/HttpExecutor.csproj
 #    - name: Zip linux version
 #      run: |
-#        zip httprun-${{ steps.date.outputs.date }}-linux.gz  --junk-paths -i "./rel-linux/*"
+#        zip -r httprun-${{ steps.date.outputs.date }}-linux.gz  --junk-paths rel-linux/*
     - name: Publish Windows version
       run: dotnet publish -c Release -r win-x64 --self-contained true -o ./rel-win ./src/HttpExecutor/HttpExecutor.csproj
     - name: Check files
-      run: ls -latr ./rel-win
+      run: ls -latr ./rel-linux
     - name: Zip Windows version
       run: |
-        zip httprun-${{ steps.date.outputs.date }}-win64.zip  --junk-paths -i "./rel-win/*" 
+        zip -r httprun-${{ steps.date.outputs.date }}-win64.zip --junk-paths rel-win/*
     - name: release
       uses: actions/create-release@v1
       id: create_release
