--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,9 @@
 name: Release
 
 on:
-  pull_request:
+  release:
     branches:
       - main
-      - '!develop'
-      - '!feature/**'
       
 jobs:
   build:
